...
        navigationItem.rightBarButtonItem = UIBarButtonItem(
            image: UIImage(systemName: "plus"),
            style: .plain,
            target: self,
            action: #selector(addExpenseTapped)
        )
        navigationItem.rightBarButtonItem?.accessibilityIdentifier = "addExpenseButton"
        let logoutButton = UIBarButtonItem(image: UIImage(systemName: "power.circle.fill"),
                                                   style: .plain,
                                                   target: self,
                                                   action: #selector(logoutTapped))
        navigationItem.leftBarButtonItem = logoutButton
        
...
